prevent the buble from overlaping with the sticky buttons

--- a/app/assets/stylesheets/components/messages-bubble.css
+++ b/app/assets/stylesheets/components/messages-bubble.css
@@ -1,7 +1,7 @@
 .message-bubble-cta {
   position: fixed;
-  bottom: 10px;
-  right: 50px;
+  bottom: 82px;
+  right: 1.5rem;
 
   padding: 20px;
   border: 1px solid var(--text-action-high-blue-france);
@@ -12,6 +12,12 @@
   z-index: 1000;
   border-radius: 50%;
   background-image: none;
+}
+@media (min-width: 1430px) {
+  .message-bubble-cta {
+    bottom: 39px;
+    right: 39px;
+  }
 }
 
 .message-bubble-cta:hover {
